udpate: serviceをClusteIPからNodePortに修正

--- a/docs/firebolt-core/helm/templates/service.yaml
+++ b/docs/firebolt-core/helm/templates/service.yaml
@@ -8,7 +8,7 @@ metadata:
     {{- include "fbcore.labels" . | nindent 4 }}
     firebolt/nodes-count: {{ .Values.nodesCount | quote }}
 spec:
-  type: ClusterIP
+  type: NodePort
   # create a headless service
   clusterIP: None
   publishNotReadyAddresses: true
