--- a/docs/1-argocd/manifests/argocd-cm.yml
+++ b/docs/1-argocd/manifests/argocd-cm.yml
@@ -1,7 +1,14 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  labels:
+    app.kubernetes.io/name: argocd-cm
+    app.kubernetes.io/part-of: argocd
   name: argocd-cm
   namespace: argocd
 data:
   accounts.admin: login,apiKey
+  application.instanceLabelKey: argocd.argoproj.io/instance
+  server.rbac.log.enforce.enable: "false"
+  timeout.hard.reconciliation: 0s
+  timeout.reconciliation: 180s
