--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 tmp/
+
+# GitHub Pages / Jekyll
+docs/_site/
+docs/.sass-cache/
+docs/.jekyll-cache/
+docs/.jekyll-metadata
+docs/Gemfile.lock
+docs/vendor/
