--- a/k0s/k0sctl-test.yml
+++ b/k0s/k0sctl-test.yml
@@ -34,3 +34,32 @@ spec:
         port: 22
         keyPath: null
       role: worker
+  # ====================
+  # k0s Configuration
+  # ====================
+  k0s:
+    version: null # Use the latest stable version
+    config:
+      # API server configuration
+      apiServer:
+        extraArgs:
+          # Enable audit logging
+          audit-log-maxage: 30
+          audit-log-maxbackup: 3
+          audit-log-maxsize: 100
+
+      # Network configuration
+      network:
+        provider: calico # CNI plugin
+        calico:
+          mode: vxlan # or ipip
+          vxlanPort: 4789
+          mtu: 1450
+
+      # Storage configuration  
+      storage:
+        type: etcd # embedded etcd
+
+      # Enable pod security standards
+      podSecurityPolicy:
+        defaultPolicy: restricted
