--- a/k0s/example.yml
+++ b/k0s/example.yml
@@ -6,14 +6,14 @@ metadata:
 spec:
   hosts:
   - ssh:
-      address: 10.0.0.1
-      user: root
+      address: 192.168.11.240
+      user: aoba
       port: 22
       keyPath: null
     role: controller
   - ssh:
-      address: 10.0.0.2
-      user: root
+      address: 192.168.11.243
+      user: aoba
       port: 22
       keyPath: null
     role: worker
