add: 一旦コミット

--- a/k0s/k0sctl.yml
+++ b/k0s/k0sctl.yml
@@ -16,9 +16,8 @@ spec:
         address: 192.168.11.221  # k8s-ctl (controller node)
         user: aoba
         port: 22
-        keyPath: null  # SSH agent or default key will be used
       role: controller
-      
+
     # ====================
     # Worker Nodes (4台)
     # ====================
@@ -26,43 +25,39 @@ spec:
         address: 192.168.11.214  # k8s-worker-1
         user: aoba
         port: 22
-        keyPath: null
       role: worker
-      
+
     - ssh:
         address: 192.168.11.220  # k8s-worker-2
         user: aoba
         port: 22
-        keyPath: null
       role: worker
-      
+
     - ssh:
         address: 192.168.11.231  # k8s-worker-3
         user: aoba
         port: 22
-        keyPath: null
       role: worker
-      
+
     - ssh:
         address: 192.168.11.234  # k8s-worker-4
         user: aoba
         port: 22
-        keyPath: null
       role: worker
 
   # ====================
   # k0s Configuration
   # ====================
   k0s:
-    version: null  # Use the latest stable version
+    version: 1.31.2+k0s.0
     config:
       # API server configuration
-      apiServer:
+      api:
         extraArgs:
           # Enable audit logging
-          audit-log-maxage: 30
-          audit-log-maxbackup: 3
-          audit-log-maxsize: 100
+          audit-log-maxage: "30"
+          audit-log-maxbackup: "3"
+          audit-log-maxsize: "100"
       
       # Network configuration
       network:
@@ -72,10 +67,6 @@ spec:
           vxlanPort: 4789
           mtu: 1450
 
-      # Storage configuration  
+      # Storage configuration
       storage:
         type: etcd  # embedded etcd
-        
-      # Enable pod security standards
-      podSecurityPolicy:
-        defaultPolicy: restricted
